// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeSummaryBar render inverted badges 1`] = `
<div
  aria-label="42 Passed, 13 Failed, 7 Incomplete"
  className="outcome-summary-bar"
  data-automation-id="outcome-summary-bar"
  role="img"
>
  <div
    style={
      {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass summary-bar-left-edge"
    >
      <CheckIconInverted />
      42
    </span>
  </div>
  <div
    style={
      {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIconInverted />
      13
    </span>
  </div>
  <div
    style={
      {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete summary-bar-right-edge"
    >
      <CircleIcon />
      7
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show by count 1`] = `
<div
  aria-label="42 Passed, 13 Failed, 7 Incomplete"
  className="outcome-summary-bar"
  data-automation-id="outcome-summary-bar"
  role="img"
>
  <div
    style={
      {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass summary-bar-left-edge"
    >
      <CheckIcon />
      42
    </span>
  </div>
  <div
    style={
      {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIcon />
      13
    </span>
  </div>
  <div
    style={
      {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete summary-bar-right-edge"
    >
      <CircleIcon />
      7
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show by percentage 1`] = `
<div
  aria-label="42% Passed, 13% Failed, 7% Incomplete"
  className="outcome-summary-bar"
  data-automation-id="outcome-summary-bar"
  role="img"
>
  <div
    style={
      {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass summary-bar-left-edge"
    >
      <CheckIcon />
      42
      %
    </span>
  </div>
  <div
    style={
      {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIcon />
      13
      %
    </span>
  </div>
  <div
    style={
      {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete summary-bar-right-edge"
    >
      <CircleIcon />
      7
      %
    </span>
  </div>
</div>
`;

exports[`OutcomeSummaryBar show with text label 1`] = `
<div
  aria-label="42 Passed, 13 Failed, 7 Incomplete"
  className="outcome-summary-bar"
  data-automation-id="outcome-summary-bar"
  role="img"
>
  <div
    style={
      {
        "flexGrow": 42,
      }
    }
  >
    <span
      className="pass summary-bar-left-edge"
    >
      <CheckIcon />
      42
      <span
        className="label"
      >
         Passed
      </span>
    </span>
  </div>
  <div
    style={
      {
        "flexGrow": 13,
      }
    }
  >
    <span
      className="fail"
    >
      <CrossIcon />
      13
      <span
        className="label"
      >
         Failed
      </span>
    </span>
  </div>
  <div
    style={
      {
        "flexGrow": 7,
      }
    }
  >
    <span
      className="incomplete summary-bar-right-edge"
    >
      <CircleIcon />
      7
      <span
        className="label"
      >
         Incomplete
      </span>
    </span>
  </div>
</div>
`;
